--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,6 @@
 
 }
 
-
-
 /* .titleText{
     text-shadow: 4px 2px 4px rgba(0, 0, 0, 0.5);
 } */
@@ -21,13 +19,19 @@
 
 /* Set background image */
 body {
-  background-image: url('./Media/bg_tile_dark.png');
+  /* background-image: url('./Media/bg_tile_light_4.png'); */
+  /* background: #85959d; */
+  background: #0d1316;
   background-repeat: repeat-y;
   background-size: cover;
   font-size: 1.2rem;
-  color: ivory;
-}
+  color: rgb(255, 255, 255);
 
+  
+  font-family: "Anek Devanagari", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 
 
 /* @media (min-width: 768px) {
@@ -43,12 +47,14 @@ body {
     position: absolute;
     /* top: 0px;
     left: 0px; */
-    height: 65vh; /* Half the height of the viewport */
+    height: 100vh;
     width: 100%;
-    object-fit: cover;
-    filter: brightness(0.6);
     background-size: cover;
+    object-fit:fill;
+    filter: brightness(0.6);
     z-index: -1; /* Place behind other content */
+    background-repeat: no-repeat;
+    
   }
 
 .person-photo {
@@ -65,12 +71,13 @@ body {
   }
 
 .custom-icon {
-    max-width: 10%; /* Ensure image does not exceed its parent's width */
+    max-width: 5%; /* Ensure image does not exceed its parent's width */
     height: auto; /* Maintain aspect ratio */
   }
 
 .content-BoxGCU{
-  background-image: url('./Media/bg_tile_light_4.png');
+  /* background-image: url('./Media/bg_tile_light_4.png'); */
+  background-color: #59646a;
   background-repeat: repeat-y;
   background-size: cover;
   /* background-color: #c7c7c7; */
@@ -104,3 +111,26 @@ body {
 }
 
 
+.gradStudentStyle{
+  background: #384043;
+}
+
+
+.undergradStyle{
+  background: #4c575b;
+}
+
+.customh1{
+  color: #f9b376;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.customlink {
+  color: #FFD5B0;
+  text-decoration: none;
+}
+
+.customlink:hover {
+  color: #b58c68;
+  text-decoration: none;
+}
